force-app/main/default/objects/Collateral_Sub_Detail__c/Collateral_Sub_Detail__c.object-meta.xml
<CustomObject>
    <label>Collateral Sub Detail</label>
    <nameField>
        <displayFormat>CSD-{0000000000}</displayFormat>
        <label>Collateral Sub Detail No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collateral Sub Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>