force-app/main/default/objects/Collateral_Sub_Detail__c/fields/collat_sub_type_desc__c.field-meta.xml
<CustomField>
    <fullName>collat_sub_type_desc__c</fullName>
    <description>ประเภทหลักประกันย่อย</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ประเภทหลักประกันย่อย</inlineHelpText>
    <label>Collateral Sub Type Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>