force-app/main/default/objects/Collateral_Sub_Detail__c/fields/Collateral_Account__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collateral Account</label>
    <referenceTo>Collateral_Account__c</referenceTo>
    <relationshipLabel>Collateral Sub Detail</relationshipLabel>
    <relationshipName>Collateral_Sub_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>