force-app/main/default/objects/Collateral_Sub_Detail__c/fields/Collateral_Sub_External_Key__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Sub_External_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Using merge 7 fields for this unique key &quot;&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Collateral_Sub_External_Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>