force-app/main/default/objects/Collateral_Sub_Detail__c/fields/NIT_PAWN_DATE__c.field-meta.xml
<CustomField>
    <fullName>NIT_PAWN_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>วันทำนิติกรรม</inlineHelpText>
    <label>Nit Pawn Date</label>
    <type>Date</type>
</CustomField>