force-app/main/default/objects/Collateral_Sub_Detail__c/fields/nit_pawn_type__c.field-meta.xml
<CustomField>
    <fullName>nit_pawn_type__c</fullName>
    <description>รหัสประเภทนิติกรรม</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>รหัสประเภทนิติกรรม</inlineHelpText>
    <label>Nit Pawn Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>