force-app/main/default/objects/Collateral_Sub_Detail__c/fields/nit_runno__c.field-meta.xml
<CustomField>
    <fullName>nit_runno__c</fullName>
    <description>เลขที่นิติกรรม</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>เลขที่นิติกรรม</inlineHelpText>
    <label>Nit Running No</label>
    <length>40</length>
    <type>Text</type>
</CustomField>