force-app/main/default/objects/Collateral_Sub_Detail__c/fields/one_evaluate_amt__c.field-meta.xml
<CustomField>
    <fullName>one_evaluate_amt__c</fullName>
    <description>ราคาประเมินล่าสุด</description>
    <inlineHelpText>ราคาประเมินล่าสุด</inlineHelpText>
    <label>One Evaluate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>