force-app/main/default/objects/Collateral_Sub_Detail__c/fields/one_evaluate_date__c.field-meta.xml
<CustomField>
    <fullName>one_evaluate_date__c</fullName>
    <description>วันที่ประเมินล่าสุด</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>วันที่ประเมินล่าสุด</inlineHelpText>
    <label>One Evaluate Date</label>
    <type>Date</type>
</CustomField>