force-app/main/default/objects/Collateral_Sub_Detail__c/fields/pawn_desc__c.field-meta.xml
<CustomField>
    <fullName>pawn_desc__c</fullName>
    <description>ประเภทนิติกรรม</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ประเภทนิติกรรม</inlineHelpText>
    <label>Pawn Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>